--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,139 @@ Green: #00B172
 White: #FFF
 
 */
+
+#menu {
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    background: white;
+}
+
+#logoSpotify {
+    height: 50px;
+    width: 200px;
+    margin-left: 3%;
+}
+
+#navbar {
+    margin-right: 40px;
+}
+
+button {
+    border: white;
+    background: white;
+    font-size: 18px;
+}
+
+li {
+    display: inline;
+    margin-right: 15px;
+    
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+h4 {
+    font-size: 30px;
+    border-bottom: 3px solid white;
+}
+
+h5 {
+    font-size: 20px;
+}
+
+h1, p, footer h4, footer * h5 {
+    color: white;
+}
+
+h2 {
+    text-align: center;
+    font-size: 40px;
+    border-bottom: 3px solid #00B172;
+    width: 330px;
+}
+
+#description {
+    background-image: url(../images/landing.jpg);
+    height: 90vh;
+    width: 100%;
+    background-size: 136vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#description > p {
+    margin-top: 5px;
+    margin-bottom: 0px;
+    font-size: 18px;
+}
+
+footer {
+    height: 600px;
+    margin: 100px 50px 30px;
+    background: #00B172;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+article {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+
+}
+
+article * img {
+    width: 110px;
+    height: 100px;
+}
+
+h3 {
+    color: #00B172;
+}
+
+.what {
+    width: 250px;
+    text-align: center;
+    font-size: 20px;
+}
+
+#spotifyIcon {
+    height: 100px;
+}
+
+#kanye {
+    width: 300px;
+    height: 500px;
+}
+
+footer > * {
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+#footerDescription {
+    width: 360px;
+}
+
+#question {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
